--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -119,9 +119,26 @@ nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: url("../assets/images/hero_cafe.jpg") fixed;
-  background-size: cover;
   height: 100vh; }
+  .section__welcome .welcome__backdrop {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    background: url("../assets/images/hero_cafe.jpg");
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: cover; }
+  @media only screen and (max-width: 413px) {
+    .section__welcome .welcome__backdrop {
+      background: url("../assets/images/hero_mobile.jpg");
+      background-attachment: fixed;
+      background-position: center center;
+      background-attachment: scroll; } }
   .section__welcome .welcome__header {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 32rem;
